Fix horizontal scroll on MS Edge

--- a/src/sass/helpers/_base.scss
+++ b/src/sass/helpers/_base.scss
@@ -27,7 +27,7 @@ body {
 }
 
 hr.wp-block-separator {
-  width: 100vw;
+  width: 100%;
   position: relative;
   left: 50%;
   transform: translateX(-50%);
